--- a/applets/systemtray/container/CMakeLists.txt
+++ b/applets/systemtray/container/CMakeLists.txt
@@ -9,7 +9,10 @@ set(systemtraycontainer_SRCS
 ecm_qt_declare_logging_category(systemtraycontainer_SRCS HEADER debug.h
                                             IDENTIFIER SYSTEM_TRAY_CONTAINER
                                             CATEGORY_NAME kde.systemtraycontainer
-                                            DEFAULT_SEVERITY Info)
+                                            DEFAULT_SEVERITY Info
+                                            DESCRIPTION "plasma applet systemtray container"
+                                            EXPORT PLASMAWORKSPACE
+                                        )
 
 kcoreaddons_add_plugin(org.kde.plasma.systemtray SOURCES ${systemtraycontainer_SRCS} INSTALL_NAMESPACE "plasma/applets")
 
