--- a/xembed-sni-proxy/CMakeLists.txt
+++ b/xembed-sni-proxy/CMakeLists.txt
@@ -42,7 +42,10 @@ qt_add_dbus_interface(XEMBED_SNI_PROXY_SOURCES ${statusnotifierwatcher_xml} stat
 ecm_qt_declare_logging_category(XEMBED_SNI_PROXY_SOURCES HEADER debug.h
                                                IDENTIFIER SNIPROXY
                                                CATEGORY_NAME kde.xembedsniproxy
-                                               DEFAULT_SEVERITY Info)
+                                               DEFAULT_SEVERITY Info
+                                               DESCRIPTION "xembed sni proxy"
+                                               EXPORT PLASMAWORKSPACE
+                                           )
 
 add_executable(xembedsniproxy ${XEMBED_SNI_PROXY_SOURCES})
 
