--- a/dataengines/notifications/CMakeLists.txt
+++ b/dataengines/notifications/CMakeLists.txt
@@ -12,7 +12,10 @@ set(notifications_engine_SRCS
 ecm_qt_declare_logging_category(notifications_engine_SRCS HEADER debug.h
                                                IDENTIFIER NOTIFICATIONS
                                                CATEGORY_NAME kde.dataengine.notifications`
-                                               DEFAULT_SEVERITY Info)
+                                               DEFAULT_SEVERITY Info
+                                               DESCRIPTION "DataEngine notifications"
+                                               EXPORT PLASMAWORKSPACE
+                                           )
 
 kcoreaddons_add_plugin(plasma_engine_notifications SOURCES ${notifications_engine_SRCS} INSTALL_NAMESPACE plasma5support/dataengine)
 
