--- a/libdbusmenuqt/CMakeLists.txt
+++ b/libdbusmenuqt/CMakeLists.txt
@@ -11,7 +11,10 @@ dbusmenutypes_p.h
 ecm_qt_declare_logging_category(libdbusmenu_SRCS HEADER debug.h
                                             IDENTIFIER DBUSMENUQT
                                             CATEGORY_NAME org.kde.libdbusmenuqt
-                                            DEFAULT_SEVERITY Info)
+                                            DEFAULT_SEVERITY Info
+                                            DESCRIPTION "libdbusmenu debug"
+                                            EXPORT PLASMAWORKSPACE
+                                        )
 
 set_source_files_properties(com.canonical.dbusmenu.xml PROPERTIES
    NO_NAMESPACE true
