libtaskmanager: add region filter
The new filter provides 3 options
- Inside: filter windows that are inside a region
- Intersect: filter windows that intersect with a region
- Outside: filter windows that are outside of a region.

The new filter will be used in the image wallpaper plugin and the panel.

--- a/libtaskmanager/CMakeLists.txt
+++ b/libtaskmanager/CMakeLists.txt
@@ -12,6 +12,7 @@ set(taskmanager_LIB_SRCS
     flattentaskgroupsproxymodel.cpp
     launchertasksmodel.cpp
     startuptasksmodel.cpp
+    regionfiltermode.h
     taskfilterproxymodel.cpp
     taskgroupingproxymodel.cpp
     tasksmodel.cpp
@@ -86,6 +87,7 @@ install(FILES
     concatenatetasksproxymodel.h
     flattentaskgroupsproxymodel.h
     launchertasksmodel.h
+    regionfiltermode.h
     startuptasksmodel.h
     taskfilterproxymodel.h
     taskgroupingproxymodel.h
