runners/services: Request services only once in a match session
Since the runner is in it's own thread, we can reuse the services without worrying about blocking the main thread or thread safety

--- a/runners/services/CMakeLists.txt
+++ b/runners/services/CMakeLists.txt
@@ -2,10 +2,8 @@
 # SPDX-License-Identifier: BSD-2-Clause
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_services\")
 
-add_library(krunner_services_static STATIC servicerunner.cpp)
-set_property(TARGET krunner_services_static PROPERTY POSITION_INDEPENDENT_CODE ON)
-
-ecm_qt_declare_logging_category(krunner_services_static
+kcoreaddons_add_plugin(krunner_services SOURCES servicerunner.cpp INSTALL_NAMESPACE "kf6/krunner")
+ecm_qt_declare_logging_category(krunner_services
     HEADER debug.h
     IDENTIFIER RUNNER_SERVICES
     CATEGORY_NAME org.kde.plasma.runner.services
@@ -13,8 +11,7 @@ ecm_qt_declare_logging_category(krunner_services_static
     DESCRIPTION "krunner services"
     EXPORT PLASMAWORKSPACE
 )
-
-target_link_libraries(krunner_services_static
+target_link_libraries(krunner_services
     KF6::CoreAddons
     KF6::KIOGui
     KF6::I18n
@@ -24,9 +21,6 @@ target_link_libraries(krunner_services_static
     KF6::Activities
     KF6::ActivitiesStats
 )
-
-kcoreaddons_add_plugin(krunner_services SOURCES plugin.cpp INSTALL_NAMESPACE "kf6/krunner")
-target_link_libraries(krunner_services krunner_services_static)
 
 if(BUILD_TESTING)
    add_subdirectory(autotests)
