--- a/runners/services/autotests/CMakeLists.txt
+++ b/runners/services/autotests/CMakeLists.txt
@@ -3,7 +3,6 @@
 
 remove_definitions(-DQT_NO_CAST_FROM_ASCII)
 
-find_package(Threads REQUIRED)
-
 ecm_add_test(servicerunnertest.cpp TEST_NAME servicerunnertest
-    LINK_LIBRARIES Qt::Test Qt::Gui krunner_services_static Threads::Threads)
+    LINK_LIBRARIES Qt::Test KF6::Service KF6::Runner)
+krunner_configure_test(servicerunnertest krunner_services)
