--- a/kcms/desktoptheme/CMakeLists.txt
+++ b/kcms/desktoptheme/CMakeLists.txt
@@ -25,7 +25,7 @@ target_link_libraries(kcm_desktoptheme
   KF6::KIOCore
   KF6::KIOWidgets
   KF6::I18n
-  KF6::Plasma
+  KF6::Svg
   KF6::KCMUtilsQuick
 )
 
