We use qt6 only

--- a/freespacenotifier/CMakeLists.txt
+++ b/freespacenotifier/CMakeLists.txt
@@ -8,7 +8,7 @@ qt_add_dbus_interface(kded_freespacenotifier_SRCS ${KDED_DBUS_INTERFACE} kded_in
 
 kconfig_add_kcfg_files(kded_freespacenotifier_SRCS settings.kcfgc)
 
-kcoreaddons_add_plugin(freespacenotifier SOURCES ${kded_freespacenotifier_SRCS} INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/kded")
+kcoreaddons_add_plugin(freespacenotifier SOURCES ${kded_freespacenotifier_SRCS} INSTALL_NAMESPACE "kf6/kded")
 
 target_link_libraries(freespacenotifier
     KF6::ConfigWidgets
