--- a/kioworkers/applications/CMakeLists.txt
+++ b/kioworkers/applications/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_definitions(-DTRANSLATION_DOMAIN=\"kio5_applications\")
 
-kcoreaddons_add_plugin(kio_applications SOURCES kio_applications.cpp INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/kio")
+kcoreaddons_add_plugin(kio_applications SOURCES kio_applications.cpp INSTALL_NAMESPACE "kf6/kio")
 set_target_properties(kio_applications PROPERTIES OUTPUT_NAME "applications")
 
 target_link_libraries(kio_applications KF6::KIOCore KF6::I18n KF6::Service Qt::Network)
