--- a/libcolorcorrect/LibColorCorrectConfig.cmake.in
+++ b/libcolorcorrect/LibColorCorrectConfig.cmake.in
@@ -1,8 +1,8 @@
 @PACKAGE_INIT@
 
 include(CMakeFindDependencyMacro)
-find_dependency(Qt@QT_MAJOR_VERSION@Core "@QT_MIN_VERSION@")
-find_dependency(Qt@QT_MAJOR_VERSION@Quick "@QT_MIN_VERSION@")
+find_dependency(Qt6Core "@QT_MIN_VERSION@")
+find_dependency(Qt6Quick "@QT_MIN_VERSION@")
 find_dependency(KF6Plasma "@KF6_MIN_VERSION@")
 
 include("${CMAKE_CURRENT_LIST_DIR}/LibColorCorrectLibraryTargets.cmake")
