--- a/libcolorcorrect/kded/CMakeLists.txt
+++ b/libcolorcorrect/kded/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories (${CMAKE_CURRENT_BINARY_DIR}/..)
 
-kcoreaddons_add_plugin(colorcorrectlocationupdater SOURCES locationupdater.cpp locationupdater.h INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/kded")
+kcoreaddons_add_plugin(colorcorrectlocationupdater SOURCES locationupdater.cpp locationupdater.h INSTALL_NAMESPACE "kf6/kded")
 
 target_link_libraries(colorcorrectlocationupdater
                         KF6::DBusAddons
