--- a/libkworkspace/LibKWorkspaceConfig.cmake.in
+++ b/libkworkspace/LibKWorkspaceConfig.cmake.in
@@ -1,6 +1,6 @@
 @PACKAGE_INIT@
 
 include(CMakeFindDependencyMacro)
-find_dependency(Qt@QT_MAJOR_VERSION@Core "@QT_MIN_VERSION@")
+find_dependency(Qt6Core "@QT_MIN_VERSION@")
 
 include("${CMAKE_CURRENT_LIST_DIR}/LibKWorkspaceLibraryTargets.cmake")
