--- a/libnotificationmanager/LibNotificationManagerConfig.cmake.in
+++ b/libnotificationmanager/LibNotificationManagerConfig.cmake.in
@@ -1,9 +1,9 @@
 @PACKAGE_INIT@
 
 include(CMakeFindDependencyMacro)
-find_dependency(Qt@QT_MAJOR_VERSION@Core "@QT_MIN_VERSION@")
-find_dependency(Qt@QT_MAJOR_VERSION@Gui "@QT_MIN_VERSION@")
-find_dependency(Qt@QT_MAJOR_VERSION@Quick "@QT_MIN_VERSION@")
+find_dependency(Qt6Core "@QT_MIN_VERSION@")
+find_dependency(Qt6Gui "@QT_MIN_VERSION@")
+find_dependency(Qt6Quick "@QT_MIN_VERSION@")
 find_dependency(KF6ItemModels "@KF6_MIN_VERSION@")
 
 include("${CMAKE_CURRENT_LIST_DIR}/LibNotificationManagerLibraryTargets.cmake")
