--- a/statusnotifierwatcher/CMakeLists.txt
+++ b/statusnotifierwatcher/CMakeLists.txt
@@ -14,5 +14,5 @@ set_source_files_properties(${statusnotifieritem_xml} PROPERTIES
 )
 qt_add_dbus_interface(kded_statusnotifierwatcher_SRCS ${statusnotifieritem_xml} statusnotifieritem_interface)
 
-kcoreaddons_add_plugin(statusnotifierwatcher SOURCES ${kded_statusnotifierwatcher_SRCS} INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/kded")
+kcoreaddons_add_plugin(statusnotifierwatcher SOURCES ${kded_statusnotifierwatcher_SRCS} INSTALL_NAMESPACE "kf6/kded")
 target_link_libraries(statusnotifierwatcher Qt::DBus KF6::DBusAddons KF6::CoreAddons)
