Import applications.menu from KService
This is Plasma-specific, so should not be shipped by a framework

Also rename it to plasma-applications and set XDG_MENU_PREFIX at startup
to avoid clashes with other environments

https://phabricator.kde.org/T12542

--- a/menu/desktop/CMakeLists.txt
+++ b/menu/desktop/CMakeLists.txt
@@ -41,3 +41,5 @@
    kf5-utilities-pim.directory
    kf5-utilities-xutils.directory
 DESTINATION  ${KDE_INSTALL_DESKTOPDIR} )
+
+install( FILES plasma-applications.menu  DESTINATION  ${KDE_INSTALL_SYSCONFDIR}/xdg/menus )
