runners/services: Make sure testaction has different exec
Otherwise, we ignore the result, because we have the normal konsole
result.

--- a/runners/services/autotests/fixtures/org.kde.konsole.desktop
+++ b/runners/services/autotests/fixtures/org.kde.konsole.desktop
@@ -18,7 +18,7 @@ Comment=Command line access ServiceRunnerTest
 
 [Desktop Action NewWindow]
 Name=Open a New Window
-Exec=konsole
+Exec=konsole --new-window
 
 [Desktop Action NewTab]
 Name=Open a New Tab
