runners/baloo: Change user-visible name to "File Search"

--- a/runners/baloo/plasma-runner-baloosearch.desktop
+++ b/runners/baloo/plasma-runner-baloosearch.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Desktop Search
+Name=File Search
 Name[ar]=بحث سطح المكتب
 Name[az]=İşarə və tərkibinə görə axtarış
 Name[be]=Пошук у працоўным асяроддзі
