kcms: Add new Sound Theme KCM
Add a new KCM to select the global Sound Theme that will be
used to play notifications.

The KCM lists the themes found in the system or user sound paths,
the context information they provide, and several of the most used
sounds to preview and compare.

--- a/kcms/CMakeLists.txt
+++ b/kcms/CMakeLists.txt
@@ -24,3 +24,4 @@ add_subdirectory(region_language)
 add_subdirectory(notifications)
 add_subdirectory(nightcolor)
 add_subdirectory(users)
+add_subdirectory(soundtheme)
