wallpapers/image: pause animated wallpaper when monitor is turned off
This adds a new DPMS monitor to monitor the monitor power status. When
monitor is turned off, animated wallpapers will be paused to reduce
energy consumption.

--- a/wallpapers/image/plugin/CMakeLists.txt
+++ b/wallpapers/image/plugin/CMakeLists.txt
@@ -17,6 +17,7 @@ set(image_SRCS
     provider/packageimageprovider.cpp
     provider/providertype.h
     utils/backgroundtype.h
+    utils/dpmsmonitor.cpp
     utils/maximizedwindowmonitor.cpp
     utils/mediaproxy.cpp
 )
@@ -45,6 +46,7 @@ target_link_libraries(plasma_wallpaper_imageplugin_static
     KF6::KIOGui
     KF6::Notifications
     KF6::Package
+    KF6::ScreenDpms
     PW::LibTaskManager
     )
 
