--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -76,6 +76,9 @@ Dependencies:
     'third-party/packagekit-qt': '@latest'
 
 RuntimeDependencies:
+- 'on': ['Linux']
+  'require':
+    'network/kio-extras': '@latest-kf6'
 - 'on': ['Linux', 'FreeBSD']
   'require':
     'plasma/milou' : '@same'
