Port away from direct access to Corona KActionCollection
KActionCollection hasbeen dropped from libplasma: use the new
replacement api instead

depends from https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/826

--- a/shell/CMakeLists.txt
+++ b/shell/CMakeLists.txt
@@ -95,6 +95,8 @@ target_link_libraries(plasmashell
  KF6::CoreAddons
  KF6::DBusAddons
  KF6::XmlGui
+ KF6::WidgetsAddons
+ KF6::ConfigGui
  KF6::Package
  KF6::WaylandClient
  KF6::Notifications
