require that tests pass
they currently all pass. let's keep it this way!

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -79,3 +79,6 @@ RuntimeDependencies:
 - 'on': ['Linux', 'FreeBSD']
   'require':
     'plasma/milou' : '@same'
+
+Options:
+  require-passing-tests-on: [ 'Linux/Qt5', 'FreeBSD/Qt5']
