ci: enable require tests for everything
(this also fixes bad copy paste whereby the requirement was enabled for
qt5)

disable broken tests accordingly

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -84,4 +84,4 @@ RuntimeDependencies:
     'plasma/milou' : '@same'
 
 Options:
-  require-passing-tests-on: [ 'Linux/Qt5', 'FreeBSD/Qt5']
+  require-passing-tests-on: [ '@all' ]
