use KCountryFlagEmojiIconEngine for regional flag icons
the old pixmap approach was deprecated throughout all of kf5 already.
it's replaced by the iconengine in kf6

this features a very simplistic caching system. after some testing with
an async threaded cache system, a pre-caching albeit blocking system,
and this simplistic system it appears that the simplest approach has the
best code-to-performance ratio. more involved caching brings only
marginal improvements

--- a/kcms/region_language/CMakeLists.txt
+++ b/kcms/region_language/CMakeLists.txt
@@ -72,7 +72,9 @@ target_link_libraries(kcm_regionandlang
     KF6::KCMUtils
     KF6::KCMUtilsQuick
     KF6::ItemModels
+    KF6::GuiAddons
     Qt::Core5Compat
+    Qt::Quick
 )
 if(UBUNTU_LOCALE)
     target_link_libraries(kcm_regionandlang PK::packagekitqt6)
