Remove ability to semi-globally change icon sizes
See https://invent.kde.org/plasma/plasma-desktop/-/issues/58 for reasons
and discussion.

BUG: 417954
FIXED-IN: 6.0

--- a/kcms/icons/CMakeLists.txt
+++ b/kcms/icons/CMakeLists.txt
@@ -2,7 +2,7 @@ add_definitions(-DTRANSLATION_DOMAIN=\"kcm_icons\")
 
 kcmutils_add_qml_kcm(kcm_icons)
 
-target_sources(kcm_icons PRIVATE main.cpp iconsmodel.cpp iconsizecategorymodel.cpp iconssettings.cpp ../kcms-common.cpp)
+target_sources(kcm_icons PRIVATE main.cpp iconsmodel.cpp iconssettings.cpp ../kcms-common.cpp)
 kcmutils_generate_module_data(kcm_icons
     MODULE_DATA_HEADER iconsdata.h
     MODULE_DATA_CLASS_NAME IconsData
