add layershell support to the mock compoeitor
now plasmashell uses layershell for panels, so in order for shelltest
to keep working, it needs a minimal support for layershell in the
autotest compositor

--- a/shell/autotests/mockserver/CMakeLists.txt
+++ b/shell/autotests/mockserver/CMakeLists.txt
@@ -28,6 +28,7 @@ qt6_generate_wayland_protocol_server_sources(SharedClientTest FILES
     ${WaylandProtocols_DATADIR}/stable/xdg-shell/xdg-shell.xml
     ${PLASMA_WAYLAND_PROTOCOLS_DIR}/kde-primary-output-v1.xml
     ${PLASMA_WAYLAND_PROTOCOLS_DIR}/kde-output-order-v1.xml
+    ${CMAKE_CURRENT_SOURCE_DIR}/wlr-layer-shell-unstable-v1.xml
 )
 
 
