PanelView: enable floating panel by default
The old settings are kept.

--- a/shell/kconf_update/CMakeLists.txt
+++ b/shell/kconf_update/CMakeLists.txt
@@ -14,3 +14,10 @@ target_link_libraries(plasma6.0-remove-old-shortcuts PRIVATE KF6::ConfigCore KF6
 
 install(FILES plasma6.0-remove-old-shortcuts.upd DESTINATION ${KDE_INSTALL_KCONFUPDATEDIR})
 install(TARGETS plasma6.0-remove-old-shortcuts DESTINATION ${KDE_INSTALL_LIBDIR}/kconf_update_bin/)
+
+add_executable(plasmashell-6.0-keep-default-floating-setting-for-plasma-5-panels)
+target_sources(plasmashell-6.0-keep-default-floating-setting-for-plasma-5-panels PRIVATE plasmashell-6.0-keep-default-floating-setting-for-plasma-5-panels.cpp)
+target_link_libraries(plasmashell-6.0-keep-default-floating-setting-for-plasma-5-panels KF6::ConfigCore)
+
+install(FILES plasmashell-6.0-keep-default-floating-setting-for-plasma-5-panels.upd DESTINATION ${KDE_INSTALL_KCONFUPDATEDIR})
+install(TARGETS plasmashell-6.0-keep-default-floating-setting-for-plasma-5-panels DESTINATION ${KDE_INSTALL_LIBDIR}/kconf_update_bin/)
